[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/lilythecat859/solana-accounts-fractal"

[workspace.dependencies]
# Core
solana-sdk           = "=1.18.2"
solana-geyser-plugin-interface = "=1.18.2"
tokio                = { version = "1.40", features = ["full"] }
axum                 = { version = "0.7", features = ["ws"] }
tower                = "0.5"
tower-http           = { version = "0.6", features = ["cors", "trace"] }
hyper                = "1"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
bincode              = "1"
lz4                  = "1"
# Shards
dashmap              = "6"
lazy_static          = "1"
# Observability
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }
prometheus           = "0.13"
# Config
clap                 = { version = "4", features = ["derive", "env"] }
dotenv               = "0.15"
# Build
anyhow               = "1.0"
thiserror            = "1.0"
[patch.crates-io]
solana_rbpf = { version = "0.8.2" }

