[package]
name    = "fractal-ingest"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-geyser-plugin-interface = { workspace = true }
solana-sdk                     = { workspace = true }
fractal-shard                  = { path = "../fractal-shard" }
tracing                        = { workspace = true }
tokio                          = { workspace = true }
